sumo/tests/sumo/errors/network/junction/root__junction#type__ungiven3/errors.sumo
Error: An unknown or invalid junction type '' occured in junction '3'.
 Can not build according junction.
Quitting (on error).
